@@ -1,3 +1,4 @@
+Fixed: In "Friction" tab, changing mass resets the friction coefficients to default values. All sliders should be independent of each other.
 Improved interface for adding reset listeners to the MotionSeriesModel
 Fixed: The right wall becomes detached from the ramp when you change the angle (either by dragging the ramp or using the control panel slider)
 Refactored MotionSeriesObject to use observable PositionMapper instance
